--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.57.7",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-iphone-x-helper": "^1.2.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.4"
   },
