ios app build fixes

--- a/ios/GloNative/Info.plist
+++ b/ios/GloNative/Info.plist
@@ -53,5 +53,9 @@
 	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MaterialIcons.ttf</string>
+	</array>
 </dict>
 </plist>
