--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "build": "react-native run-ios"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.13",
+    "aws-amplify-react": "^2.1.7",
+    "aws-amplify-react-native": "^2.0.11",
+    "jest-serializer": "^23.0.1",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.4"
+    "react-navigation": "^3.0.7",
+    "react-navigation-stack": "^1.0.5"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
