sets ignored files, dependencies and minor tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ buck-out/
 \.buckd/
 *.keystore
 
-# fastlane
+# fastlan
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
