Removes AWS Amplify services for Pinpoint, Cognito

--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "build": "react-native run-ios"
   },
   "dependencies": {
-    "aws-amplify": "^1.1.13",
-    "aws-amplify-react": "^2.1.7",
-    "aws-amplify-react-native": "^2.0.11",
     "jest-serializer": "^23.0.1",
     "react": "16.6.1",
     "react-native": "0.57.7",
@@ -19,10 +16,18 @@
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.7",
-    "react-navigation-stack": "^1.0.5"
+    "react-navigation-stack": "^1.0.5",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.50.0",
     "react-test-renderer": "16.6.1"
