--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-devtools-extension": "^2.13.7"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
