--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "build": "react-native run-ios"
+    "build": "react-native run-ios",
+    "flow": "flow"
   },
   "dependencies": {
     "jest-serializer": "^23.0.1",
@@ -24,13 +25,16 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.78.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.50.0",
+    "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.6.1"
   },
   "jest": {
