--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "esversion": 6
     },
     "editor.snippetSuggestions": "none",
-    "editor.hover.enabled": false,
+    "editor.hover.enabled": true,
     "editor.formatOnSave": true,
     "javascript.format.enable": false,
     "prettier.eslintIntegration": true,
