--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.11.1",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.50.0",
+    "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.6.1"
   },
   "jest": {
