--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,22 @@
     "jshint.options": {
         "esversion": 6
     },
+    "eslint.autoFixOnSave": false,
+    "eslint.enable": false,
     "editor.snippetSuggestions": "none",
     "editor.hover.enabled": false,
     "editor.formatOnSave": true,
     "javascript.format.enable": false,
-    "prettier.eslintIntegration": true
+    "prettier.eslintIntegration": true,
+    "editor.trimAutoWhitespace": true,
+    "editor.formatOnPaste": false,
+    "editor.formatOnType": false,
+    "editor.formatOnSave": false,
+    "prettier.semi": false,
+    "prettier.jsxBracketSameLine": true,
+    "prettier.singleQuote": true,
+    "prettier.tabWidth": 2,
+    "prettier.printWidth": 120,
+
+
 }
