--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
-    "jshint.options": {
-        "esversion": 6
-    },
-    "editor.snippetSuggestions": "none",
-    "editor.hover.enabled": false,
-    "editor.formatOnSave": true,
-    "javascript.format.enable": false,
-    "prettier.eslintIntegration": true
+  "jshint.options": {
+    "esversion": 6
+  },
+  "editor.snippetSuggestions": "none",
+  "editor.hover.enabled": false,
+  "editor.formatOnSave": true,
+  "javascript.format.enable": true,
+  "prettier.eslintIntegration": true,
+  "prettier.singleQuote": true,
+  "prettier.semi": false
 }
