--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
-  "jshint.options": {
-    "esversion": 6
-  },
   "editor.snippetSuggestions": "none",
-  "editor.hover.enabled": false,
+  "editor.hover.enabled": true,
   "editor.formatOnSave": true,
   "javascript.format.enable": true,
-  "prettier.eslintIntegration": true,
+  "prettier.bracketSpacing": true,
+  "prettier.jsxBracketSameLine": true,
+  "prettier.printWidth": 110,
+  "prettier.tabWidth": 2,
   "prettier.singleQuote": true,
-  "prettier.semi": false
+  "prettier.semi": false,
+  "eslint.quiet": true
 }
